force-app/main/default/objects/Stack_Result__c/Stack_Result__c.object-meta.xml
<CustomObject>
    <description
  >Stores results from the Build Your Salesforce Stack configurator</description>
    <label>Stack Result</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Stack Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stack Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>