force-app/main/default/objects/Stack_Result__c/fields/Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Company_Size__c</fullName>
    <description>Company size selected by visitor</description>
    <label>Company Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Startup 1-50</fullName>
            </value>
            <value>
                <fullName>Mid-Market 50-500</fullName>
            </value>
            <value>
                <fullName>Enterprise 500-5000</fullName>
            </value>
            <value>
                <fullName>Large Enterprise 5000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>