force-app/main/default/objects/Stack_Result__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Lead record created from the configurator</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Stack Results</relationshipLabel>
    <relationshipName>Stack_Results</relationshipName>
    <type>Lookup</type>
</CustomField>