force-app/main/default/objects/Stack_Result__c/fields/Pain_Points__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points__c</fullName>
    <description>Pain points and challenges described by visitor</description>
    <label>Pain Points</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>