force-app/main/default/objects/Stack_Result__c/fields/Recommended_Stack__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Stack__c</fullName>
    <description>The architecture recommendation generated by Agentforce</description>
    <label>Recommended Stack</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>